// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiImage is rendered 1`] = `
<figure
  class="wuiImage testClass1 testClass2 wuiImage--large"
>
  <img
    alt="alt"
    aria-label="aria-label"
    class="wuiImage__img"
    data-test-subj="test subject string"
    src="/cat.jpg"
  />
</figure>
`;

exports[`WuiImage is rendered and allows full screen 1`] = `
<figure
  class="wuiImage wuiImage--allowFullScreen testClass1 testClass2 wuiImage--large"
>
  <button
    aria-label="Open full screen alt image"
    class="wuiImage__button"
    data-test-subj="activateFullScreenButton"
    type="button"
  >
    <img
      alt="alt"
      aria-label="aria-label"
      class="wuiImage__img"
      data-test-subj="test subject string"
      src="/cat.jpg"
    />
    <div
      class="wuiImage__icon"
      color="ghost"
      data-wuiicon-type="fullScreen"
    />
  </button>
</figure>
`;

exports[`WuiImage is rendered with a node as the caption 1`] = `
<figure
  class="wuiImage "
>
  <img
    alt="alt"
    class="wuiImage__img"
    src="/cat.jpg"
  />
  <figcaption
    class="wuiImage__caption"
  >
    <span>
      caption
    </span>
  </figcaption>
</figure>
`;

exports[`WuiImage is rendered with custom size 1`] = `
<figure
  class="wuiImage"
>
  <img
    alt="alt"
    class="wuiImage__img"
    src="/cat.jpg"
    style="max-width:50px;max-height:50px;width:auto"
  />
</figure>
`;
